welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: not found: value Direction
	if (getDirection() == Direction.EST){
                              ^ZigZag:14: error: not found: value Direction
		setDirection(Direction.SOUTH)
                             ^ZigZag:16: error: method zigzagEtMarque has return statement; needs result type
			return
                        ^ZigZag:18: error: not found: value x
			setPos (x, y + 1)
                                ^ZigZag:22: error: not found: value Direction
	}else if (getDirection() == Direction.WEST){
                                    ^ZigZag:23: error: not found: value Direction
		setDirection(Direction.SOUTH)
                             ^ZigZag:24: error: not found: value x
		setPos(x, y + 1)
                       ^ZigZag:4: error: not found: value cpt
}while ( cpt == 48)
         ^